--- a/anabeesh/src/main/res/values/strings.xml
+++ b/anabeesh/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <!--Registration-->
     <string name="login"><b>تسجيل الدخول</b></string>
-    <string name="register">التسجيل</string>
+    <string name="register"><b>تسجيل</b></string>
     <string name="new_account">حساب جديد</string>
     <string name="first_name">الإسم الأول</string>
     <string name="last_name">الإسم الأخير</string>
@@ -34,4 +34,18 @@
     <string name="forget_password">نسيت كلمه المرور ؟</string>
     <string name="please_fill_data">من فضلك املأ جميع البيانات</string>
     <string name="password_format_error_login">كلمه مرور غير صحيحة</string>
+
+    <!--Host-->
+    <string name="notifications">الاشعارات</string>
+    <string name="search">بحث</string>
+    <string name="drawer_open">مفتوح</string>
+    <string name="drawer_close">مغلق</string>
+    <string name="home">الرئيسية</string>
+    <string name="bookmarks">المحفوظات</string>
+    <string name="interests">الاهتمامات</string>
+    <string name="join_us">انضم الينا</string>
+    <string name="settings">الاعدادات</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
