--- a/anabeesh/src/main/res/values/strings.xml
+++ b/anabeesh/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="articles_details">تفاصيل المقال</string>
     <string name="top_rated_questions">الاسئلة الاكثر تقييما</string>
     <string name="newest_questions">جديد</string>
+    <string name="question_details">تفاصيل السؤال</string>
 </resources>
