--- a/anabeesh/src/main/res/values/strings.xml
+++ b/anabeesh/src/main/res/values/strings.xml
@@ -56,4 +56,9 @@
     <string name="top_rated_questions">الاسئلة الاكثر تقييما</string>
     <string name="newest_questions">جديد</string>
     <string name="question_details">تفاصيل السؤال</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="edit_profile">تعديل الملف الشخصي</string>
+    <string name="logout">تسجيل خروج</string>
 </resources>
